--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,1 @@
-registry=https://npm.pkg.github.com/whaaaley
-//npm.pkg.github.com:_authToken=${GITHUB_TOKEN}
+@whaaaley:registry=https://npm.pkg.github.com
