--- a/package.json
+++ b/package.json
@@ -8,22 +8,25 @@
     "start": "make start"
   },
   "dependencies": {
-    "@whaaaley/material-icons-scss": "^2.0.2",
+    "@whaaaley/material-icons-scss": "^2.0.6",
+    "lodash-es": "^4.17.20",
     "superfine": "^8.0.10"
   },
   "devDependencies": {
+    "@whaaaley/parcel-source-map-cli": "^0.5.0",
     "clean-css-cli": "^4.3.0",
-    "esbuild": "^0.8.21",
+    "esbuild": "^0.8.26",
     "node-sass": "^5.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3",
+    "uglify-js": "^3.12.3"
   },
   "optionalDependencies": {
-    "eslint": "^7.15.0",
-    "eslint-config-standard": "^14.1.1",
+    "eslint": "^7.16.0",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.1.0",
+    "eslint-plugin-standard": "^5.0.0",
     "sass-lint": "^1.13.1"
   }
 }
