--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
-    "@whaaaley/parcel-source-map-cli": "^0.5.0",
     "clean-css-cli": "^4.3.0",
     "esbuild": "^0.8.26",
-    "node-sass": "^5.0.0",
+    "sass": "^1.32.0",
     "typescript": "^4.1.3",
     "uglify-js": "^3.12.3"
   },
